[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "numpy>=2.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.43.2",
]
